<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.apprenti.nouvellequete.MainActivity">

<<<<<<< HEAD
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:id="@+id/textView" />
=======
>>>>>>> 7c3c5075bf7742b8b005f9bca09e1edc9ccb7b73

    <TextView
        android:text="@string/Welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
<<<<<<< HEAD
        android:layout_marginTop="17dp"
        android:id="@+id/checkBox"
        android:text="@string/checkBox"
        android:layout_below="@+id/textView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="24dp"
        android:layout_marginEnd="24dp" />
=======
        android:id="@+id/textView3"
        android:layout_above="@+id/checkBox3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="18dp"
        android:layout_marginStart="18dp"
        android:layout_marginBottom="12dp" />
>>>>>>> 7c3c5075bf7742b8b005f9bca09e1edc9ccb7b73

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/Nom"
        android:ems="10"
<<<<<<< HEAD
        android:layout_below="@+id/checkBox"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="41dp"
        android:id="@+id/prenom"
        android:text="@string/prenom"
        android:enabled="false"/>

    <Button
        android:text="@string/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:id="@+id/button"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/checkBox"
        android:layout_alignStart="@+id/checkBox"
        android:layout_marginBottom="101dp" />
=======
        android:id="@+id/editText5"
        android:layout_above="@+id/editText5"
        android:layout_alignLeft="@+id/editText6"
        android:layout_alignStart="@+id/editText6"
        android:layout_marginBottom="108dp" />
>>>>>>> 7c3c5075bf7742b8b005f9bca09e1edc9ccb7b73

    <Button
        android:text="@string/Valider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
<<<<<<< HEAD
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/nom"
        android:text="@string/nom"
        android:layout_below="@+id/checkBox"
        android:layout_alignLeft="@+id/prenom"
        android:layout_alignStart="@+id/prenom"
        android:enabled="false"/>

    <TextView
        android:text="@+id/felicitation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/felicitation"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

=======
        android:id="@+id/button2"
        android:layout_marginBottom="134dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <CheckBox
        android:text="@string/CheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/checkBox3"
        android:layout_marginLeft="26dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="32dp"
        android:layout_below="@+id/editText6"
        android:layout_toRightOf="@+id/textView3"
        android:layout_toEndOf="@+id/textView3" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/Prénom"
        android:ems="10"
        android:id="@+id/editText6"
        android:layout_marginTop="123dp"
        android:layout_below="@+id/editText5"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignStart="@+id/textView3"
        android:layout_marginLeft="68dp"
        android:layout_marginStart="68dp" />
>>>>>>> 7c3c5075bf7742b8b005f9bca09e1edc9ccb7b73
</RelativeLayout>
